// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExpressionOutput > bad expression > renders 1`] = `
<div>
  <div
    class="css-995cds"
    direction="row"
  >
    <svg
      fill="none"
      height="32"
      viewBox="0 0 36.95041722813605 32"
      width="36.95041722813605"
    >
      <mask
        id="mask"
      >
        <g>
          <rect
            fill="white"
            height="32"
            width="36.95041722813605"
            x="0"
            y="0"
          />
          <text
            alignment-baseline="middle"
            fill="black"
            font-size="25.6"
            text-anchor="middle"
            x="18.475208614068023"
            y="21.333333333333332"
          >
            !
          </text>
        </g>
      </mask>
      <g
        id="tri"
        mask="url(#mask)"
      >
        <path
          d="
            M 17.260677434251694 8
            A 5.333333333333333 5.333333333333333 0 0 1 26.498281741285705 8
            L 39.140157022020404 28.333333333333336
            A 5.333333333333333 5.333333333333333 0 0 1 34.521354868503394 36.333333333333336
            L 9.237604307034008 36.333333333333336
            A 5.333333333333333 5.333333333333333 0 0 1 4.618802153517002 28.333333333333336
            z
        "
          fill="rgb(0% 0% 0%)"
          stroke="none"
          transform="translate(-3.904270973700675, -5.333333333333335)"
        />
      </g>
    </svg>
    <span
      class="css-1tlx7i-typographic"
      type="1"
    >
      Invalid Expression
    </span>
  </div>
</div>
`;

exports[`ExpressionOutput > boolean > renders 1`] = `
<div>
  <span
    class="css-1tlx7i-typographic"
  >
    Boolean: true
  </span>
</div>
`;

exports[`ExpressionOutput > number > renders 1`] = `
<div>
  <span
    class="css-1tlx7i-typographic"
  >
    Number: 12
  </span>
</div>
`;

exports[`ExpressionOutput > string > renders 1`] = `
<div>
  <span
    class="css-1tlx7i-typographic"
  >
    String: asdf
  </span>
</div>
`;

exports[`ExpressionOutput > unexpected result type > renders 1`] = `
<div>
  <div
    class="css-995cds"
    direction="row"
  >
    <svg
      fill="none"
      height="32"
      viewBox="0 0 36.95041722813605 32"
      width="36.95041722813605"
    >
      <mask
        id="mask"
      >
        <g>
          <rect
            fill="white"
            height="32"
            width="36.95041722813605"
            x="0"
            y="0"
          />
          <text
            alignment-baseline="middle"
            fill="black"
            font-size="25.6"
            text-anchor="middle"
            x="18.475208614068023"
            y="21.333333333333332"
          >
            !
          </text>
        </g>
      </mask>
      <g
        id="tri"
        mask="url(#mask)"
      >
        <path
          d="
            M 17.260677434251694 8
            A 5.333333333333333 5.333333333333333 0 0 1 26.498281741285705 8
            L 39.140157022020404 28.333333333333336
            A 5.333333333333333 5.333333333333333 0 0 1 34.521354868503394 36.333333333333336
            L 9.237604307034008 36.333333333333336
            A 5.333333333333333 5.333333333333333 0 0 1 4.618802153517002 28.333333333333336
            z
        "
          fill="rgb(0% 0% 0%)"
          stroke="none"
          transform="translate(-3.904270973700675, -5.333333333333335)"
        />
      </g>
    </svg>
    <span
      class="css-1tlx7i-typographic"
      type="1"
    >
      Expression must return a primitive
    </span>
  </div>
</div>
`;
